changelog endpoint https://github.com/ecosyste-ms/roadmap/issues/14
